force-app/main/default/objects/Award__c/Award__c.object-meta.xml
<CustomObject>
    <description>Track all player achievements, trophies, medals, and honors (Transfermarkt-style)</description>
    <label>Award</label>
    <nameField>
        <displayFormat>AWD-{00000}</displayFormat>
        <label>Award Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>