force-app/main/default/objects/Award__c/fields/Award_Category__c.field-meta.xml
<CustomField>
    <fullName>Award_Category__c</fullName>
    <description>Category of award</description>
    <label>Award Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Award</fullName>
            </value>
            <value>
                <fullName>Team Trophy</fullName>
            </value>
            <value>
                <fullName>Medal</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Scoring Title</fullName>
            </value>
            <value>
                <fullName>Team of Season</fullName>
            </value>
            <value>
                <fullName>Championship Ring</fullName>
            </value>
            <value>
                <fullName>Hall of Fame</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>