force-app/main/default/objects/Award__c/fields/Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Type__c</fullName>
    <description>Type of award (e.g., Player of the Year, Cup Winner)</description>
    <label>Award Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>