force-app/main/default/objects/Award__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>League or tournament</description>
    <label>Competition</label>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>