force-app/main/default/objects/Award__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>For "2x Winner" (default 1)</description>
    <label>Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>