force-app/main/default/objects/Award__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Achievement details (e.g., "8 Goals", "2025, 2019")</description>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>