force-app/main/default/objects/Award__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <description>Trophy/medal image URL</description>
    <label>Icon URL</label>
    <type>Url</type>
</CustomField>