force-app/main/default/objects/Award__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <description>Recipient of the award</description>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>