force-app/main/default/objects/Award__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Placement (1, 2, 3 for medals)</description>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>