force-app/main/default/objects/Award__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Season received</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>