force-app/main/default/objects/Award__c/fields/Season_Name__c.field-meta.xml
<CustomField>
    <fullName>Season_Name__c</fullName>
    <description>Display name (e.g., 19/20, 2024)</description>
    <label>Season Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>