force-app/main/default/objects/Award__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Display priority (default 100)</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>