force-app/main/default/objects/Award__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team at time of award</description>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>