force-app/main/default/objects/Award__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year awarded (e.g., 2019, 2024)</description>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>